[package]
name = "grapetree-rs"
version = "0.1.0"
edition = "2021"
description = "Fast Rust port of GrapeTree (achtman-lab): MSTree / MSTreeV2 / NJ phylogenetics from cgMLST allelic profiles"
license = "GPL-3.0-or-later"
repository = "https://github.com/genpat-it/grapetree-rs"
homepage = "https://github.com/genpat-it/grapetree-rs"
readme = "README.md"
authors = ["Andrea de Ruvo <a.deruvo@izs.it>"]
keywords = ["bioinformatics", "phylogenetics", "cgMLST", "mstree", "grapetree"]
categories = ["command-line-utilities", "science"]
exclude = ["/regression", "/benches", "/.github", "/tests/data/*.nwk"]

[[bin]]
name = "grapetree"
path = "src/main.rs"

[lib]
name = "grapetree"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
anyhow = "1"
flate2 = "1"

[dev-dependencies]
# regression + property tests

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
